Bug 1527879: Explicitly set ICU's data directory to stop ICU from trying to load individual files on Windows. r=jwalden

And change the shell to use JS_InitWithFailureDiagnostic instead of plain
JS_Init, so any ICU data loading errors will be printed to stderr instead of
simply exiting the application.

Differential Revision: https://phabricator.services.mozilla.com/D23133